--- a/views/login.pug
+++ b/views/login.pug
@@ -1,8 +1,8 @@
 extends layout
 
 block content 
-	h1 login
-	form(method='POST', action='users/login')
+	h1 Login
+	form(method='POST', action='/users/login')
 		#form-group
 			label Username:
 			input.form-control(name='username', type='text')
@@ -11,3 +11,5 @@ block content
 			input.form-control(name='password', type='password')
 		br
 		input.btn.btn-primary(type='submit', value="Submit" )
+		input.btn.btn-primary(type="button" onclick="location.href = '/auth/google';" value="Sign in with Google")
+
