--- a/views/layout.pug
+++ b/views/layout.pug
@@ -19,7 +19,7 @@ html
             span.icon-bar
             span.icon-bar
             span.icon-bar
-          a.navbar-brand(href='/') IDC
+          a.navbar-brand(href='/') Cam
         #navbar.collapse.navbar-collapse
           ul.nav.navbar-nav
             li
