--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,6 +3,9 @@ html
   head
     title I Don't Care
     // Latest compiled and minified CSS
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+
     link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css', integrity='sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u', crossorigin='anonymous')
     // Optional theme
     link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css', integrity='sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp', crossorigin='anonymous')
@@ -19,7 +22,7 @@ html
             span.icon-bar
             span.icon-bar
             span.icon-bar
-          a.navbar-brand(href='/') Cam is cool
+          a.navbar-brand(href='/') Home
         #navbar.collapse.navbar-collapse
           ul.nav.navbar-nav
             li
@@ -28,6 +31,8 @@ html
             if user
               li 
                 a(href='/users/logout') Logout
+              li
+                a(href='/users/' + user._id)=user.name
             else
               li
                 a(href='/users/login') Login
