--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,6 +3,9 @@ html
   head
     title I Don't Care
     // Latest compiled and minified CSS
+    link(rel='stylesheet', href='/css/fontawesome-all.css')
+    link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css')
+
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 
@@ -32,7 +35,8 @@ html
               li 
                 a(href='/users/logout') Logout
               li
-                a(href='/users/' + user._id)=user.name
+                a(href='/users/' + user._id)=user.name + " "
+                  i.fa.fa-user-circle(aria-hidden='true')
             else
               li
                 a(href='/users/login') Login
