--- a/views/layout.pug
+++ b/views/layout.pug
@@ -25,7 +25,7 @@ html
             span.icon-bar
             span.icon-bar
             span.icon-bar
-          a.navbar-brand(href='/') Home
+          a.navbar-brand(href='/') Welcome
         #navbar.collapse.navbar-collapse
           ul.nav.navbar-nav
             li
