--- a/views/layout.pug
+++ b/views/layout.pug
@@ -35,7 +35,7 @@ html
               li 
                 a(href='/users/logout') Logout
               li
-                a(href='/users/' + user._id)=user.name + " "
+                a(href='/users/profile/' + user._id)=user.name + " "
                   i.fa.fa-user-circle(aria-hidden='true')
             else
               li
