added in alert messages for signing in and out

--- a/views/main.pug
+++ b/views/main.pug
@@ -8,4 +8,4 @@ block content
 				li.list-group-item
 					a(href="/users/profile/"+ user._id)=user.name
 	else
-		p1 No users online!
+		p4 No users registered!
