--- a/views/layout.pug
+++ b/views/layout.pug
@@ -41,6 +41,7 @@ html
               li
                 a(href='/users/login') Login
     .container
+      != messages('message', locals)
       block content
       br
       hr
