--- a/views/login.pug
+++ b/views/login.pug
@@ -10,6 +10,11 @@ block content
 			label Password:
 			input.form-control(name='password', type='password')
 		br
-		input.btn.btn-primary(type='submit', value="Submit" )
-		input.btn.btn-primary(type="button" onclick="location.href = '/auth/google';" value="Sign in with Google")
+		input.btn.btn(type="image" onclick="location.href = '/auth/google';" src='../public/images/google.png')
+
+
+
+
+
+
 
