fixed button not redirecting properly

--- a/views/login.pug
+++ b/views/login.pug
@@ -10,7 +10,7 @@ block content
 			label Password:
 			input.form-control(name='password', type='password')
 		br
-		input.btn.btn(type="image" onclick="location.href = '/auth/google';" src='../public/images/google.png')
+		input.btn.btn(type="button" onclick="location.href = '/auth/google';" style="background-image: url( 'http://localhost:8080/public/images/google.png'); width: 195px; height: 50px")
 
 
 
