--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,8 +3,8 @@ html
   head
     title I Don't Care
     // Latest compiled and minified CSS
-    link(rel='stylesheet', href='/css/fontawesome-all.css')
     link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css')
+    link(href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css", rel="stylesheet", integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN", crossorigin="anonymous")
 
 
 
