--- a/views/login.pug
+++ b/views/login.pug
@@ -10,7 +10,11 @@ block content
 			label Password:
 			input.form-control(name='password', type='password')
 		br
-		input.btn.btn(type="button" onclick="location.href = '/auth/google';" style="background-image: url( 'http://localhost:8080/public/images/google.png'); width: 195px; height: 50px")
+
+		a(href="/auth/google")
+			img(src="../public/images/google.png")
+
+
 
 
 
