--- a/views/login.pug
+++ b/views/login.pug
@@ -12,7 +12,8 @@ block content
 		br
 
 		a(href="/auth/google")
-			img(src="../public/images/google.png")
+			img( id="google" src="../public/images/google.png")
+
 
 
 
