started work on profile pic uploading

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -36,7 +36,7 @@ html
             if user
               li
                 .dropdown
-                  button.btn.btn-secondary.dropdown-toggle(role='button', 
+                  button.btn.dropdown-toggle(role='button', 
                     style="margin: 10px 10px" data-toggle='dropdown', 
                     aria-haspopup='true',aria-expanded='true')=user.name + "  "
                       i.fa.fa-user-circle(aria-hidden='true')
