--- a/views/profile.pug
+++ b/views/profile.pug
@@ -2,3 +2,14 @@ extends layout
 
 block content 
 	h1 #{profile}
+
+	form(method='POST' enctype='multipart/form-data' action='/users/upload/' + user.id)
+		input(type='file' name='avatar')
+		input(type='submit' value='Submit')
+
+
+	if user.profilePic
+		img(src= user.profilePic )
+
+
+
