--- a/views/main.pug
+++ b/views/main.pug
@@ -6,8 +6,8 @@ block content
 		ul.list-group
 			each user, i in users
 				li.list-group-item
-					img(src=user.profilePic, height='40px', width='40px')
-					a(href="/users/profile/"+ user._id)= "     " + user.name
+					img.img-circle(src=user.profilePic, height='40px', width='40px')
+					a(href="/users/profile/"+ user._id)=user.name
 
 	else
 		p4 No users registered!
