--- a/views/main.pug
+++ b/views/main.pug
@@ -7,7 +7,7 @@ block content
 			each user, i in users
 				li.list-group-item
 					img.img-circle(src=user.profilePic, height='40px', width='40px' style='border: 3px; padding: 2px')
-					a(href="/users/profile/"+ user._id)=user.name
+					a(href="/users/profile/"+ user._id, style='font-weight: bold; padding: 4px')=user.name
 
 	else
 		p4 No users registered!
