--- a/public/css/style.css
+++ b/public/css/style.css
@@ -44,6 +44,12 @@ body, html {
 
 
 
+
+.right {
+  text-align: right;
+}
+
+
 /**
  * Ranking component
  */
@@ -197,7 +203,6 @@ border: medium none;
 border-radius: 4px;
 color: #fff;
 float: right;
-font-family: Lato;
 font-size: 14px;
 letter-spacing: 0.3px;
 margin-right: 9px;
