--- a/views/main.pug
+++ b/views/main.pug
@@ -8,7 +8,7 @@ block content
 
 	.container
 		.row
-			h2 New Post
+			h2 I Don't Care
 		.row
 			.col-md-6
 				.widget-area.no-padding.blank
@@ -62,7 +62,16 @@ block content
 										a(href='#' + post._id, data-toggle='tooltip', data-placement='bottom', data-original-title='Picture')
 											i.fa.fa-trash-o
 								.panel-body  #{post.content}
-								// /panel-body
-						// /panel panel-default
-					// /col-sm-5		
+								.panel-footer.right
+	
+											a(href='#' + post._id, data-toggle='tooltip', data-placement='top', style='padding: 3px' data-original-title='Picture')
+												i.fa.fa-thumbs-up
+											a(href='#' + post._id, data-toggle='tooltip', data-placement='top', style='padding: 3px' data-original-title='Picture')
+												i.fa.fa-thumbs-down
+
+						
+											a(href='#' + post._id, data-toggle='tooltip', data-placement='top', style='padding: 3px' data-original-title='Picture')
+												i.fa.fa-comments
+
+		
 
