--- a/public/css/style.css
+++ b/public/css/style.css
@@ -42,13 +42,45 @@ body, html {
     margin-top: 43px;
 }
 
-
-
-
-.right {
-  text-align: right;
+.profile-header a {
+  color: #777777;
 }
 
+
+
+
+.right a {
+    -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  -ms-border-radius: 4px;
+  -o-border-radius: 4px;
+  border-radius: 4px;
+  color: #777777;
+  float: right;
+  font-size: 14px;
+  height: 20px;
+  line-height: 5px;
+  margin: 0px 0 0px 0px;
+  text-align: center;
+  -webkit-transition: all 0.4s ease 0s;
+  -moz-transition: all 0.4s ease 0s;
+  -ms-transition: all 0.4s ease 0s;
+  -o-transition: all 0.4s ease 0s;
+  transition: all 0.4s ease 0s;
+  width: 25px;
+  cursor: pointer;
+}
+
+.left {
+  text-align: left;
+  float: left;
+  position: relative;
+}
+
+.left i {
+  margin-right: 15px; 
+  margin-left: 5px;
+}
 
 /**
  * Ranking component
@@ -68,6 +100,13 @@ body, html {
 .thumbnail {
     padding:0px;
 }
+
+.panel-footer{
+  float: left;
+  position: relative;
+  width: 100%;
+}
+
 .panel {
   position:relative;
 }
