--- a/views/layout.pug
+++ b/views/layout.pug
@@ -64,5 +64,5 @@ html
       hr
       footer
         p Copyright &copy; 2017
-  //  script(src='/js/main.js')  
+    script(src='/js/main.js')  
 
