--- a/views/main.pug
+++ b/views/main.pug
@@ -59,7 +59,7 @@ block content
 										strong #{user.name}
 									span.text-muted= "  " + post.date
 									.pull-right
-										a(href='#' + post._id, data-toggle='tooltip', data-placement='bottom', data-original-title='Picture')
+										a.delete-post(href='#', data-id=post._id, data-toggle='tooltip', data-placement='bottom', data-original-title='Picture')
 											i.fa.fa-trash-o
 								.panel-body  #{post.content}
 								.panel-footer
@@ -68,12 +68,17 @@ block content
 											a(href='#' + post._id, data-toggle='tooltip', data-placement='top', style='padding: 3px' data-original-title='Picture')
 												i.fa.fa-comments
 									.left
-										a(href='/posts/like/' + post._id, data-toggle='tooltip', data-placement='top', style='padding: 3px' data-original-title='Picture')=post.likes
+										a.add-like(href='#' + post._id, data-id=post._id, data-toggle='tooltip', data-placement='top', style='padding: 3px' data-original-title='Picture')
+											if post.likes 
+												#{post.likes}
 										
 											i.fa.fa-thumbs-up
-										a(href='/posts/dislike/' + post._id, data-toggle='tooltip', data-placement='top', style='padding: 3px' data-original-title='Picture')=post.dislikes
+										a.add-like(href='#' + post._id,data-id=post._id, data-toggle='tooltip', data-placement='top', style='padding: 3px' data-original-title='Picture')
+											if post.dislikes 
+												#{post.dislikes}
 
 											i.fa.fa-thumbs-down
+				br
 
 		
 
