--- a/views/main.pug
+++ b/views/main.pug
@@ -52,8 +52,8 @@ block content
 										span.text-muted= "  " + post.date
 										.pull-right
 											if user.id == u.id
-												a.delete-post(href='#', deleted-id=post._id, data-toggle='tooltip', data-placement='bottom', data-original-title='Picture')
-													i.fa.fa-trash-o
+												a.delete-post(href='#', delete-id=post._id, data-toggle='tooltip', data-placement='bottom', data-original-title='Picture')
+													i.fa.fa-trash-o(delete-id=post._id)
 									.panel-body  #{post.content}
 									.panel-footer
 										.right
@@ -62,13 +62,13 @@ block content
 													i.fa.fa-comments
 										.left
 											a.add-like(href='#' + post._id, data-id=post._id, data-toggle='tooltip', data-placement='top', style='padding: 3px' data-original-title='Picture')
-												if post.likes 
-													#{post.likes}
+												if post.like_count
+													#{post.like_count}
 											
 												i.fa.fa-thumbs-up(data-id=post._id)
 											a.add-dislike(href='#' + post._id,data-id=post._id, data-toggle='tooltip', data-placement='top', style='padding: 3px' data-original-title='Picture')
-												if post.dislikes 
-													#{post.dislikes}
+												if post.dislike_count
+													#{post.dislike_count}
 
 												i.fa.fa-thumbs-down(data-id=post._id)
 					br
