--- a/views/main.pug
+++ b/views/main.pug
@@ -35,44 +35,43 @@ block content
 
 	if user
 		if !users.empty
-			each u in users
-				each post in u.posts
-					.container
-						.row
-							.col-xs-3.col-sm-2.col-md-2.col-lg-2
-								.thumbnail
-									img.img-responsive.user-photo(src=u.profilePic)
-								// /thumbnail
-							// /col-sm-1
-							.col-xs-9.col-sm-10.col-md-10.col-lg-10
-								.panel.panel-default
-									.panel-heading
-										a(href='/users/profile/' + u._id)
-											strong #{u.name}
-										span.text-muted= "  " + post.date
-										.pull-right
-											if user.id == u.id
-												a.delete-post(href='#', delete-id=post._id, data-toggle='tooltip', data-placement='bottom', data-original-title='Picture')
-													i.fa.fa-trash-o(delete-id=post._id)
-									.panel-body  #{post.content}
-									.panel-footer
-										.right
-							
-												a(href='#' + post._id, data-toggle='tooltip', data-placement='top', style='padding: 3px' data-original-title='Picture')
-													i.fa.fa-comments
-										.left
-											if post.like_count
-												span.text-muted=post.like_count										
-											a.add-like(href='#' + post._id, data-id=post._id, data-toggle='tooltip', data-placement='top', style='padding: 3px' data-original-title='Picture')
-												i.fa.fa-thumbs-up(data-id=post._id)
-											if post.dislike_count
-												span.text-muted=post.dislike_count
-											a.add-dislike(href='#' + post._id,data-id=post._id, data-toggle='tooltip', data-placement='top', style='padding: 3px' data-original-title='Picture')
-												i.fa.fa-thumbs-down(data-id=post._id)
+			each post in posts
+				.container
+					.row
+						.col-xs-3.col-sm-2.col-md-2.col-lg-2
+							.thumbnail
+								img.img-responsive.user-photo(src=post.author.profilePic)
+							// /thumbnail
+						// /col-sm-1
+						.col-xs-9.col-sm-10.col-md-10.col-lg-10
+							.panel.panel-default
+								.panel-heading
+									a(href='/users/profile/' + post.author._id)
+										strong #{post.author.name}
+									span.text-muted= "  " + post.date
+									.pull-right
+										if user.id == post.author.id
+											a.delete-post(href='#', delete-id=post._id, data-toggle='tooltip', data-placement='bottom', data-original-title='Picture')
+												i.fa.fa-trash-o(delete-id=post._id)
+								.panel-body  #{post.content}
+								.panel-footer
+									.right
+						
+											a(href='#' + post._id, data-toggle='tooltip', data-placement='top', style='padding: 3px' data-original-title='Picture')
+												i.fa.fa-comments
+									.left
+										if post.like_count
+											span.text-muted=post.like_count										
+										a.add-like(href='#' + post._id, data-id=post._id, data-toggle='tooltip', data-placement='top', style='padding: 3px' data-original-title='Picture')
+											i.fa.fa-thumbs-up(data-id=post._id)
+										if post.dislike_count
+											span.text-muted=post.dislike_count
+										a.add-dislike(href='#' + post._id,data-id=post._id, data-toggle='tooltip', data-placement='top', style='padding: 3px' data-original-title='Picture')
+											i.fa.fa-thumbs-down(data-id=post._id)
 
 
-												
-					br
+											
+				br
 
 		
 
