--- a/views/main.pug
+++ b/views/main.pug
@@ -2,6 +2,12 @@ extends layout
 
 block content 
 
+
+	.container
+		.row
+			.col-12
+					button.btn.btn-primary( onclick="window.location.href='/pssst'") Pssst
+
 	.container
 		.row
 			.col-md-12
