Added new stylesheet as well as changed the name of pssst and got io connection

--- a/views/chat.pug
+++ b/views/chat.pug
@@ -4,6 +4,9 @@ extends layout
 block content 
 
     script(src="../public/js/pssst-chat.js")
+    link(rel='stylesheet', href='/public/css/style.css')
+
+    
 
 
 
