--- a/views/main.pug
+++ b/views/main.pug
@@ -6,7 +6,7 @@ block content
 	.container
 		.row
 			.col-12
-					button.btn.btn-primary( onclick="window.location.href='/pssst'") Pssst
+					button.btn.btn-primary( onclick="window.location.href='/chat'") Pssst
 
 	.container
 		.row
