Added chat button and new part of panel

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -38,6 +38,8 @@ html
             li
               a(href='/') Home
           ul.nav.navbar-nav.navbar-right
+            li 
+              a(href='/chat') Live Chat
             if user
               li
                   a(href='/users/registered') View Users
