more work done on chat

--- a/views/chat.pug
+++ b/views/chat.pug
@@ -11,7 +11,7 @@ block content
         #chat-window
             #output
             #feedback
-        input#message(type='text' placeholder='Type a message: ')
+        input#message(type='text' user=user placeholder='Type a message: ')
         button#send Send
 
 
