--- a/views/layout.pug
+++ b/views/layout.pug
@@ -45,7 +45,7 @@ html
                   a(href='/users/registered') View Users
               li
                 .dropdown
-                  button.btn.brn-primary.dropdown-toggle(role='button', 
+                  button.btn.dropdown-toggle(role='button', 
                     style="margin: 10px 10px" data-toggle='dropdown', 
                     aria-haspopup='true',aria-expanded='true')=user.name + "  "
                       if user.profilePic
