added autoscroll to messages

--- a/views/chat.pug
+++ b/views/chat.pug
@@ -6,13 +6,17 @@ block content
     script(src="../public/js/pssst-chat.js")
     link(rel='stylesheet', href='/public/css/chat.css')
 
-    #chat-box
-        h2 Pssst
-        #chat-window
-            #output
-            #feedback
-        input#message(type='text' user=user.name placeholder='Type a message: ')
-        button#send Send
+
+    .container
+        .col
+            #chat-box
+                h2 Pssst
+                #chat-window
+                    #output
+                    #feedback
+                #form-group
+                    input#message(type='text' user=user.name placeholder='Type a message: ')
+                    button#send Send
 
 
 
