--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -15,7 +15,7 @@ h2{
 
 #chat-window{
     height: 400px;
-    overflow: auto;
+    overflow-y: scroll;
     background: #f9f9f9;
 }
 
@@ -24,6 +24,8 @@ h2{
     margin: 0 20px;
     border-bottom: 1px solid #e9e9e9;
     color: #555;
+    max-width: 100%;
+    word-break: break-all;
 }
 
 #feedback p{
